Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -116,7 +116,6 @@ pre { /* fixes code option in editor */
         }
         ul {
             max-width: 80%;
-            float: none;
             text-align: center;
             padding: 0;
             @media @tablet {
